--- a/LEATS Project/Views/Home/Index.cshtml
+++ b/LEATS Project/Views/Home/Index.cshtml
@@ -2,30 +2,197 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<!DOCTYPE html>
+<html>
+      <head>
+          <title>W3.CSS Template</title>
+          <meta charset="UTF-8">
+          <meta name="viewport" content="width=device-width, initial-scale=1">
+          <!--Right hand bar css-->
+          <link rel="stylesheet" href="~/Content/RightBarStyle.css">
+          <!--Dont  know where this css belong-->
+          <link rel="stylesheet" href="~/Content/MainOrDontKnowStyle.css">
+          <style>
+              body, h1, h2, h3, h4, h5 {
+                  font-family: "Raleway", sans-serif;
+              }
+          </style>
+          
+      </head>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+<body class="w3-light-grey">
+
+    <!-- w3-content defines a container for fixed size centered content,
+    and is wrapped around the whole page content, except for the footer in this example -->
+    <div class="w3-content" style="max-width:1400px">
+
+        <!-- Header -->
+        <header class="w3-container w3-center w3-padding-32">
+            <h1><b>WELCOME TO LEATS TUTOR FINDER</b></h1>
+            <p>Enhancing student's academic performance</p>
+        </header>
+
+        <!-- Grid -->
+        <div class="w3-row">
+
+            <!-- Blog entries -->
+            <div class="w3-col l8 s12">
+                <!-- Blog entry -->
+                <div class="w3-card-4 w3-margin w3-white">
+
+                    <!--My slideshow images-->
+                    <div class="SlideShowImages">
+                        <div class="slide">
+                            <img src="~/Images/1.png" alt="Nature" style="width:100%">
+                        </div>
+                        <div class="slide">
+                            <img src="~/Images/2.jpg" alt="Nature" style="width:100%">
+                        </div>
+                        <div class="slide">
+                            <img src="~/Images/3.jpg" alt="Nature" style="width:100%">
+                        </div>
+                    </div>
+                    
+                    <div class="w3-container">
+                        <h3><b>We help students finds tutors from anywhere</b></h3>
+                        <h5>Title description, <!--<span class="w3-opacity">April 7, 2014</span>--></h5>
+                    </div>
+
+                    <div class="w3-container">
+                        <p>
+                            kkkkkkkkkkkb
+                            kkkkkkk
+                            kkkkkkkkkk
+                        </p>
+                        <div class="w3-row">
+                            <div class="w3-col m8 s12">
+                                <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
+                            </div>
+                            <!--<div class="w3-col m4 w3-hide-small">
+                                <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-tag">0</span></span></p>
+                            </div>-->
+                        </div>
+                    </div>
+                </div>
+                <hr>
+
+                <!-- Blog entry -->
+                <!--<div class="w3-card-4 w3-margin w3-white">
+                    <img src="~/Images/6-advantages-of-online-tutoring.jpeg" alt="Norway" style="width:100%">
+                    <div class="w3-container">
+                        <h3><b>BLOG ENTRY</b></h3>
+                        <h5>Title description, <span class="w3-opacity">April 2, 2014</span></h5>
+                    </div>
+
+                    <div class="w3-container">
+                        <p>
+                            kkkkkkkk
+                            kkkkkkk
+                            kkkkkkkkk
+                        </p>
+                        <div class="w3-row">
+                            <div class="w3-col m8 s12">
+                                <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
+                            </div>
+                            <div class="w3-col m4 w3-hide-small">
+                                <p><span class="w3-padding-large w3-right"><b>Comments  </b> <span class="w3-badge">2</span></span></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>-->
+                <!-- END BLOG ENTRIES -->
+            </div>
+
+            <!-- Introduction menu -->
+            <div class="w3-col l4">
+                <!-- About Card -->
+                <div class="w3-card w3-margin w3-margin-top">
+                    <!--<img src="~/Images/" style="width:100%">-->
+                    <div class="w3-container w3-white">
+                        <h4><b>Are you a tutor?</b></h4>
+                        <p>Click here to register</p>
+                    </div>
+                </div><hr>
+
+                <!-- Posts -->
+                <div class="w3-card w3-margin">
+                    <div class="w3-container w3-padding">
+                        <h4>Tutors in demand</h4>
+                    </div>
+                    <ul class="w3-ul w3-hoverable w3-white">
+                        <li class="w3-padding-16">
+                            <img src="/w3images/workshop.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+                            <span class="w3-large">COMP 102</span><br>
+                            <span>Introduction to Java Programming</span>
+                        </li>
+                        <li class="w3-padding-16">
+                            <img src="/w3images/gondol.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+                            <span class="w3-large">ISTN 101</span><br>
+                            <span>IT Fundamentals</span>
+                        </li>
+                        <li class="w3-padding-16">
+                            <img src="/w3images/skies.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+                            <span class="w3-large">ECON 101</span><br>
+                            <span>Microeconomics</span>
+                        </li>
+                        <li class="w3-padding-16 w3-hide-medium w3-hide-small">
+                            <img src="/w3images/rock.jpg" alt="Image" class="w3-left w3-margin-right" style="width:50px">
+                            <span class="w3-large">ISTN 212</span><br>
+                            <span>Databases and Programming</span>
+                        </li>
+                    </ul>
+                </div>
+                <hr>
+
+                <!-- Labels / tags 
+                <div class="w3-card w3-margin">
+                    <div class="w3-container w3-padding">
+                        <h4>Tags</h4>
+                    </div>
+                    <div class="w3-container w3-white">
+                        <p>
+                            <span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">London</span>
+                            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">IKEA</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">NORWAY</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">DIY</span>
+                            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Ideas</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Baby</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Family</span>
+                            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">News</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Clothing</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Shopping</span>
+                            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Sports</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Games</span>
+                        </p>
+                    </div>
+                </div> -->
+
+                <!-- END Introduction Menu -->
+            </div>
+
+            <!-- END GRID -->
+        </div><br>
+
+        <!-- END w3-content -->
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+
+    <!-- Footer -->
+    <footer class="w3-container w3-dark-grey w3-padding-32 w3-margin-top">
+        <button class="w3-button w3-black w3-disabled w3-padding-large w3-margin-bottom">Previous</button>
+        <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button>
+        <!--<p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>-->
+    </footer>
+
+    <script>
+        /*Slideshow code*/
+        var slideIndex = 0;
+        slideImages();
+
+        function slideImages() {
+            var i;
+            var x = document.getElementsByClassName("slide");
+            for (i = 0; i < x.length; i++) {
+                x[i].style.display = "none";
+            }
+            slideIndex++;
+            if (slideIndex > x.length) { slideIndex = 1 }
+            x[slideIndex - 1].style.display = "block";
+            setTimeout(slideImages, 5000); // Change image every 5 seconds
+        }
+    </script>
+
+</body>
+</html>
