--- a/LEATS Project/Views/Home/Index.cshtml
+++ b/LEATS Project/Views/Home/Index.cshtml
@@ -45,24 +45,26 @@
                         <div class="slide">
                             <img src="~/Images/1.png" alt="Nature" style="width:100%">
                         </div>
-                        <div class="slide">
+                        <!--LOCKED!!!
+                            
+                            div class="slide">
                             <img src="~/Images/2.jpg" alt="Nature" style="width:100%">
                         </div>
                         <div class="slide">
                             <img src="~/Images/3.jpg" alt="Nature" style="width:100%">
                         </div>
+                            -->
+                        <
                     </div>
                     
                     <div class="w3-container">
                         <h3><b>We help students finds tutors from anywhere</b></h3>
-                        <h5>Title description, <!--<span class="w3-opacity">April 7, 2014</span>--></h5>
+                       <!--<h5>Title description, <!--<span class="w3-opacity">April 7, 2014</span></h5>--> 
                     </div>
 
                     <div class="w3-container">
                         <p>
-                            kkkkkkkkkkkb
-                            kkkkkkk
-                            kkkkkkkkkk
+                            Getting a tutor for extra lessons puts you in charge. You decide what sections of work you need help with. You arrange lessons where and when you need. You choose your teacher - if you don't connect with and understand the first tutor we send, we find you another. Your tutor will work with you at your own pace and use teaching methods that suit your unique learning style
                         </p>
                         <div class="w3-row">
                             <div class="w3-col m8 s12">
@@ -77,8 +79,9 @@
                 <hr>
 
                 <!-- Blog entry -->
-                <!--<div class="w3-card-4 w3-margin w3-white">
-                    <img src="~/Images/6-advantages-of-online-tutoring.jpeg" alt="Norway" style="width:100%">
+                <!--
+                <div class="w3-card-4 w3-margin w3-white">
+                    <img src="~/Images/books.jpg" alt="Norway" style="width:100%">
                     <div class="w3-container">
                         <h3><b>BLOG ENTRY</b></h3>
                         <h5>Title description, <span class="w3-opacity">April 2, 2014</span></h5>
@@ -86,9 +89,7 @@
 
                     <div class="w3-container">
                         <p>
-                            kkkkkkkk
-                            kkkkkkk
-                            kkkkkkkkk
+                            The secret to academic success is the same as on the sportsfield or in business. Hard work, persistence and a good coach or mentor highlights natural ability and boosts confidence and self esteem.Your tutor will be totally focussed on what you need in order to set and reach achievable goals and will be there to encourage and inspire you every step of the way
                         </p>
                         <div class="w3-row">
                             <div class="w3-col m8 s12">
@@ -109,7 +110,7 @@
                 <div class="w3-card w3-margin w3-margin-top">
                     <!--<img src="~/Images/" style="width:100%">-->
                     <div class="w3-container w3-white">
-                        <h4><b>Are you a tutor?</b></h4>
+                        <h4><b>Become A Tutor</b></h4>
                         <p>Click here to register</p>
                     </div>
                 </div><hr>
@@ -143,22 +144,19 @@
                     </ul>
                 </div>
                 <hr>
-
-                <!-- Labels / tags 
                 <div class="w3-card w3-margin">
                     <div class="w3-container w3-padding">
                         <h4>Tags</h4>
                     </div>
                     <div class="w3-container w3-white">
                         <p>
-                            <span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">New York</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">London</span>
-                            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">IKEA</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">NORWAY</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">DIY</span>
-                            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Ideas</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Baby</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Family</span>
-                            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">News</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Clothing</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Shopping</span>
-                            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Sports</span> <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">Games</span>
+                            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">TUTOR</span> 
+                            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">STUDENT</span> 
+                            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">EXCEL</span> 
+                            <span class="w3-tag w3-light-grey w3-small w3-margin-bottom">LEARN</span> 
                         </p>
                     </div>
-                </div> -->
+                </div>
 
                 <!-- END Introduction Menu -->
             </div>
@@ -175,24 +173,6 @@
         <button class="w3-button w3-black w3-padding-large w3-margin-bottom">Next »</button>
         <!--<p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>-->
     </footer>
-
-    <script>
-        /*Slideshow code*/
-        var slideIndex = 0;
-        slideImages();
-
-        function slideImages() {
-            var i;
-            var x = document.getElementsByClassName("slide");
-            for (i = 0; i < x.length; i++) {
-                x[i].style.display = "none";
-            }
-            slideIndex++;
-            if (slideIndex > x.length) { slideIndex = 1 }
-            x[slideIndex - 1].style.display = "block";
-            setTimeout(slideImages, 5000); // Change image every 5 seconds
-        }
-    </script>
 
 </body>
 </html>
