--- a/LEATS Project/Content/RightBarStyle.css
+++ b/LEATS Project/Content/RightBarStyle.css
@@ -310,7 +310,7 @@ a {
 .w3-btn, .w3-button {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
-    -khtml-user-select: none;
+   /*-khtml-user-select: none;*/ 
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
