--- a/LEATS Project/Views/Home/Contact.cshtml
+++ b/LEATS Project/Views/Home/Contact.cshtml
@@ -5,13 +5,37 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    Leats Technologies<br />
+    186 Varsity Drive<br />
+    Reservior Hills<br />
+    4091<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    031 771 0224
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:Support@leats.co.za">Support@leats.co.za</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@leats.co.za">Marketing@leats.co.za</a>
 </address>
+<style>
+    #map {
+        height: 200px;
+        width: 200px;
+    }
+</style>
+<br /><br />
+<div id="map"></div>
+<script>
+    var map;
+    function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+            center: { lat: -29.808632, lng: 30.955882 },
+            zoom: 16
+        });
+        var marker = new google.maps.Marker({
+            position: { lat: -29.808632, lng: 30.955882 },
+            map: map
+        });
+    }
+</script>
+<script src="httpa://maps.googleapis.com/maps/api/js?key=XXX&callback=initMap" async defer></script>
