--- a/LEATS Project/Views/Home/Contact.cshtml
+++ b/LEATS Project/Views/Home/Contact.cshtml
@@ -19,8 +19,8 @@
 </address>
 <style>
     #map {
-        height: 200px;
-        width: 200px;
+        height: 400px;
+        width: 500px;
     }
 </style>
 <br /><br />
@@ -38,4 +38,4 @@
         });
     }
 </script>
-<script src="httpa://maps.googleapis.com/maps/api/js?key=XXX&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBmrQ9cEAhNyWORxyc_aRxEReyumPcJhhs&callback=initMap" async defer></script>
