Inter Layout page made

--- a/LEATS Project/Views/Shared/_Layout.cshtml
+++ b/LEATS Project/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -24,10 +25,12 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Find a Tutor","FindTutor","Home")</li>
-                    <li>@Html.ActionLink("Become a Tutor", "BecomeTutor", "Home")</li>
+                    <li>@Html.ActionLink("Find a Tutor", "Login", "Account")</li>
+                    <li>@Html.ActionLink("Become a Tutor", "Login", "Account")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <!--For linking to layout-->
+                    <li>@Html.ActionLink("GoInside-ForTestingPurposes", "GoInside", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
