--- a/LEATS Project/Views/Students/Create.cshtml
+++ b/LEATS Project/Views/Students/Create.cshtml
@@ -145,8 +145,9 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ProfilePicture, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ProfilePicture, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ProfilePicture, "", new { @class = "text-danger" })
+                <input type="file" id="image1" name="image1" />
+                @*@Html.EditorFor(model => model.ProfilePicture, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ProfilePicture, "", new { @class = "text-danger" })*@
             </div>
         </div>
 
