--- a/LEATS Project/Views/Students/Details.cshtml
+++ b/LEATS Project/Views/Students/Details.cshtml
@@ -8,6 +8,23 @@
 
 <div>
     <h4>Student</h4>
+    <div>
+        <table>
+            <tr>
+                <td>
+                    @{
+                        var base64 = Convert.ToBase64String(Model.ProfilePicture);
+                        var imgsrc = string.Format("data:image/gif;base64,{0}", base64);
+
+                    }
+                    <img src="@imgsrc" style="max-width:200px;max-height:200px"/>
+                </td>
+
+            </tr>
+        </table>
+         
+    </div>
+
     <hr />
     <dl class="dl-horizontal">
         <dt>
