--- a/LEATS Project/Views/Administrators/Details.cshtml
+++ b/LEATS Project/Views/Administrators/Details.cshtml
@@ -8,6 +8,22 @@
 
 <div>
     <h4>Administrator</h4>
+    <div>
+        <table>
+            <tr>
+                <td>
+                    @{
+                        var base64 = Convert.ToBase64String(Model.ProfilePicture);
+                        var imgsrc = string.Format("data:image/gif;base64,{0}", base64);
+
+                    }
+                    <img src="@imgsrc" style="max-width:200px;max-height:200px" />
+                </td>
+
+            </tr>
+        </table>
+
+    </div>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -106,21 +122,7 @@
             @Html.DisplayFor(model => model.PostalCode)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ProfilePicture)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.ProfilePicture)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AspNetUser.Email)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AspNetUser.Email)
-        </dd>
 
     </dl>
 </div>
