--- a/LEATS Project/Views/Students/Create.cshtml
+++ b/LEATS Project/Views/Students/Create.cshtml
@@ -47,7 +47,7 @@
                new SelectListItem {Text = "select", Value = "1", Selected = true },
                new SelectListItem {Text = "Male", Value = "2" },
                new SelectListItem {Text = "Female", Value = "3" }
-           }, "Slelect Gender", htmlAttributes: new { @class = "form-control" })
+           }, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -62,7 +62,7 @@
                new SelectListItem {Text = "Indian", Value = "3" },
                new SelectListItem {Text = "White", Value = "4" },
                new SelectListItem {Text = "Coloured", Value = "5" }
-           }, "Slelect", htmlAttributes: new { @class = "form-control" })
+           }, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Ethnicity, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -89,7 +89,7 @@
                 @Html.DropDownListFor(model => model.Email, new List<SelectListItem>
            {
                new SelectListItem {Text = Session["ActiveUserEmail"].ToString(), Value = "1", Selected = true },
-           }, "Slelect", htmlAttributes: new { @class = "form-control" })
+           },htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -106,7 +106,7 @@
                new SelectListItem {Text = "Honours", Value = "5" },
                new SelectListItem {Text = "Master", Value = "6" },
                new SelectListItem {Text = "PhD", Value = "7" },
-           }, "Slelect", htmlAttributes: new { @class = "form-control" })
+           }, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.LevelOfStudy, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -122,7 +122,7 @@
                new SelectListItem {Text = "Pietermaritzburg", Value = "4" },
                new SelectListItem {Text = "Medical School", Value = "5" },
                new SelectListItem {Text = "Edgewood", Value = "6" },
-           }, "Slelect", htmlAttributes: new { @class = "form-control" })
+           }, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Campus, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -137,7 +137,7 @@
                new SelectListItem {Text = "College of Agriculture, Engineering & Science", Value = "3" },
                new SelectListItem {Text = "College of Health Sciences", Value = "4" },
                new SelectListItem {Text = "College of Law and Management Studies", Value = "5" },
-           }, "Slelect", htmlAttributes: new { @class = "form-control" })
+           }, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.College, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -181,7 +181,7 @@
                new SelectListItem {Text = "North West", Value = "8" },
                new SelectListItem {Text = "Northern Cape", Value = "9" },
                new SelectListItem {Text = "Western Cape", Value = "20" },
-           }, "Slelect", htmlAttributes: new { @class = "form-control" })
+           }, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Province, "", new { @class = "text-danger" })
             </div>
         </div>
