--- a/LEATS Project/Views/Students/Edit.cshtml
+++ b/LEATS Project/Views/Students/Edit.cshtml
@@ -43,7 +43,12 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Gender, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.Gender, new List<SelectListItem>
+           {
+               new SelectListItem {Text = "select", Value = "1", Selected = true },
+               new SelectListItem {Text = "Male", Value = "2" },
+               new SelectListItem {Text = "Female", Value = "3" }
+           }, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -51,7 +56,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Ethnicity, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Ethnicity, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.Ethnicity, new List<SelectListItem>
+           {
+               new SelectListItem {Text = "select", Value = "1", Selected = true },
+               new SelectListItem {Text = "African", Value = "2" },
+               new SelectListItem {Text = "Indian", Value = "3" },
+               new SelectListItem {Text = "White", Value = "4" },
+               new SelectListItem {Text = "Coloured", Value = "5" }
+           },htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Ethnicity, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -75,7 +87,10 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
+               @Html.DropDownListFor(model => model.Email, new List<SelectListItem>
+           {
+               new SelectListItem {Text = Session["ActiveUserEmail"].ToString(), Value = "1", Selected = true },
+           }, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -83,7 +98,16 @@
         <div class="form-group">
             @Html.LabelFor(model => model.LevelOfStudy, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.LevelOfStudy, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.LevelOfStudy, new List<SelectListItem>
+           {
+               new SelectListItem {Text = "select", Value = "1", Selected = true },
+               new SelectListItem {Text = "First Year", Value = "2" },
+               new SelectListItem {Text = "Second Year", Value = "3" },
+               new SelectListItem {Text = "Third Year", Value = "4" },
+               new SelectListItem {Text = "Honours", Value = "5" },
+               new SelectListItem {Text = "Master", Value = "6" },
+               new SelectListItem {Text = "PhD", Value = "7" },
+           }, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.LevelOfStudy, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -91,7 +115,15 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Campus, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Campus, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.Campus, new List<SelectListItem>
+           {
+               new SelectListItem {Text = "select", Value = "1", Selected = true },
+               new SelectListItem {Text = "Howard", Value = "2" },
+               new SelectListItem {Text = "Westville", Value = "3" },
+               new SelectListItem {Text = "Pietermaritzburg", Value = "4" },
+               new SelectListItem {Text = "Medical School", Value = "5" },
+               new SelectListItem {Text = "Edgewood", Value = "6" },
+           }, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Campus, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -99,7 +131,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.College, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.College, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.College, new List<SelectListItem>
+           {
+               new SelectListItem {Text = "select", Value = "1", Selected = true },
+               new SelectListItem {Text = "College of Humanities", Value = "2" },
+               new SelectListItem {Text = "College of Agriculture, Engineering & Science", Value = "3" },
+               new SelectListItem {Text = "College of Health Sciences", Value = "4" },
+               new SelectListItem {Text = "College of Law and Management Studies", Value = "5" },
+           }, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.College, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -131,7 +170,19 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Province, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Province, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.Province, new List<SelectListItem>
+           {
+               new SelectListItem {Text = "select", Value = "1", Selected = true },
+               new SelectListItem {Text = "Eastern Cape", Value = "2" },
+               new SelectListItem {Text = "Free State", Value = "3" },
+               new SelectListItem {Text = "Gauteng", Value = "4" },
+               new SelectListItem {Text = "KwaZulu-Natal", Value = "5" },
+               new SelectListItem {Text = "Limpopo", Value = "6" },
+               new SelectListItem {Text = "Mpumalanga", Value = "7" },
+               new SelectListItem {Text = "North West", Value = "8" },
+               new SelectListItem {Text = "Northern Cape", Value = "9" },
+               new SelectListItem {Text = "Western Cape", Value = "20" },
+           },htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Province, "", new { @class = "text-danger" })
             </div>
         </div>
