--- a/LEATS Project/Views/TutorApplications/Details.cshtml
+++ b/LEATS Project/Views/TutorApplications/Details.cshtml
@@ -32,7 +32,7 @@
                     Download Documents
                     <div>
                         <p>
-                            Academic Transcript <a href="http://go.microsoft.com/fwlink/?LinkId=403804">Download File</a> 
+                            @*Academic Transcript <a href="http://go.microsoft.com/fwlink/?LinkId=403804">Download File</a>*@ 
                         </p>
 
                         <p>
