--- a/LEATS Project/Views/TutorApplications/Edit.cshtml
+++ b/LEATS Project/Views/TutorApplications/Edit.cshtml
@@ -43,18 +43,16 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AcademicTranscript, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input type="file" id="acad" name="acad" />
-                @*@Html.EditorFor(model => model.AcademicTranscript, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AcademicTranscript, "", new { @class = "text-danger" })*@
+                <input type="file" id="acad" name="acad" required />
+
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.ProofOfRegistration, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input type="file" id="proof" name="proof" />
-                @*@Html.EditorFor(model => model.ProofOfRegistration, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ProofOfRegistration, "", new { @class = "text-danger" })*@
+                <input type="file" id="proof" name="proof" required/>
+
             </div>
         </div>
 
