--- a/LEATS Project/Views/Tutors/Details.cshtml
+++ b/LEATS Project/Views/Tutors/Details.cshtml
@@ -78,5 +78,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.TutorID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back ", "Index")
 </p>
