--- a/LEATS Project/Views/Appointments/Create.cshtml
+++ b/LEATS Project/Views/Appointments/Create.cshtml
@@ -3,21 +3,25 @@
 @{
     ViewBag.Title = "Create";
 }
-
-<h2>Create</h2>
+<br />
+<br />
+<h2>Appointment Booking</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Appointment</h4>
+        <h4></h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.StudentD, "StudentD", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("StudentD", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownListFor(model => model.StudentD, new List<SelectListItem>
+           {
+               new SelectListItem {Text = Session["ActiveStudentID"].ToString(), Value = Session["ActiveStudentID"].ToString(), Selected = true },
+           }, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.StudentD, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -25,7 +29,12 @@
         <div class="form-group">
             @Html.LabelFor(model => model.TutorID, "TutorID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("TutorID", null, htmlAttributes: new { @class = "form-control" })
+                
+                @Html.DropDownListFor(model => model.TutorID, new List<SelectListItem>
+           {
+               new SelectListItem {Text = Session["tutID"].ToString(), Value = Session["tutID"].ToString(), Selected = true },
+           }, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.StudentD, "", new { @class = "text-danger" })
                 @Html.ValidationMessageFor(model => model.TutorID, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -57,7 +66,12 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AppointmentType, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.AppointmentType, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.AppointmentType, new List<SelectListItem>
+           {
+               new SelectListItem {Text = "select", Value = "", Selected = true },
+               new SelectListItem {Text = "Face-to-face", Value = "Face-to-face" },
+               new SelectListItem {Text = "Virtual(Zoom/Microsoft meeting)", Value = "Virtual(Zoom/Microsoft meeting)" }
+           }, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.AppointmentType, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -65,7 +79,10 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AppointmentStatus, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.AppointmentStatus, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.AppointmentType, new List<SelectListItem>
+           {
+               new SelectListItem {Text = "Pending", Value = "", Selected = true },
+           }, htmlAttributes: new {@class = "form-control" })
                 @Html.ValidationMessageFor(model => model.AppointmentStatus, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -73,7 +90,11 @@
         <div class="form-group">
             @Html.LabelFor(model => model.AppointmentDetails, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.AppointmentDetails, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.AppointmentDetails, new List<SelectListItem>
+           {
+               new SelectListItem {Text = Session["appointmentsDetails"].ToString(), Value = Session["appointmentsDetails"].ToString(), Selected = true },
+           }, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Location, "", new { @class = "text-danger" })
                 @Html.ValidationMessageFor(model => model.AppointmentDetails, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -95,5 +116,6 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("CANCEL", "Index", "Specialisations")
+
 </div>
