--- a/LEATS Project/Views/Appointments/Create.cshtml
+++ b/LEATS Project/Views/Appointments/Create.cshtml
@@ -107,9 +107,15 @@
             </div>
         </div>
 
+        <script>
+            function myFunction() {
+                alert("Appointment request sent sucessfully");
+}
+        </script>
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" onclick="myFunction()" class="btn btn-default" />
             </div>
         </div>
     </div>
