--- a/LEATS Project/Views/TutorApplications/Index.cshtml
+++ b/LEATS Project/Views/TutorApplications/Index.cshtml
@@ -4,11 +4,8 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Manage Applications</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -49,9 +46,7 @@
             @Html.DisplayFor(modelItem => item.Student.Id)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ApplicationID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ApplicationID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ApplicationID })
+            @Html.ActionLink("View application details", "Details", new { id=item.ApplicationID })
         </td>
     </tr>
 }
