--- a/LEATS Project/Views/Reviews/Create.cshtml
+++ b/LEATS Project/Views/Reviews/Create.cshtml
@@ -41,7 +41,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Rating, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Rating, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownListFor(model => model.Rating, new List<SelectListItem>
+           {
+               new SelectListItem {Text = "1", Value = "1", Selected = true },
+               new SelectListItem {Text = "2", Value = "2" },
+               new SelectListItem {Text = "3", Value = "3" },
+               new SelectListItem {Text = "4", Value = "4" },
+               new SelectListItem {Text = "5", Value = "5" },
+           }, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Rating, "", new { @class = "text-danger" })
             </div>
         </div>
