Managing roles completed

--- a/LEATS Project/Views/Shared/_Layout.cshtml
+++ b/LEATS Project/Views/Shared/_Layout.cshtml
@@ -28,10 +28,37 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Find a Tutor", "Index", "Specialisations")</li>
-                    <li>@Html.ActionLink("Become a Tutor", "Create", "TutorApplications")</li>
-                    <li>@Html.ActionLink("Manage Applicatons", "Index", "TutorApplications")</li>
+                    <li>@Html.ActionLink("Become a Tutor", "Create", "TutorApplications")</li><!--It will take you to add module if you are a tutor-->
+
                    </ul>
-                @Html.Partial("_LoginPartial")
+                @if (User.IsInRole("Student"))
+                {
+                    @Html.Partial("_StudentPartial")
+                    @Html.Partial("_LoginPartial")
+                }
+                else if (User.IsInRole("Tutor"))
+                {
+                    @Html.Partial("_TutorPartial")
+                    @Html.Partial("_LoginPartial")
+                }
+                else if (User.IsInRole("Student") && User.IsInRole("Tutor"))
+                {
+                    @Html.Partial("_StudentPartial")
+                    @Html.Partial("_TutorPartial")
+                    @Html.Partial("_LoginPartial")
+                }
+                else if (User.IsInRole("Admin"))
+                {
+                    @Html.Partial("_AdminPartial")
+                    @Html.Partial("_LoginPartial")
+                }
+                else
+                {
+                    //Html.Partial("_StudentPartial")//for testing
+                    @Html.Partial("_LoginPartial")
+                    
+                }
+
             </div>
         </div>
     </div>
